--- a/src/NoteEditor.module.css
+++ b/src/NoteEditor.module.css
@@ -45,7 +45,7 @@ h6 {
 }
 
 .toolbar {
-   @apply flex overflow-x-scroll overflow-y-hidden items-center justify-center max-h-8 gap-1 md:justify-center w-fit
+   @apply flex overflow-x-scroll overflow-y-hidden items-center justify-center max-h-8 gap-1 md:justify-center w-fit md:w-full
 }
 
 .toolbarIcon {
@@ -53,7 +53,7 @@ h6 {
 }
 
 .editorContainer {
-    @apply overflow-auto h-auto w-full justify-center
+    @apply overflow-auto h-auto w-full justify-center py-4
 }
 
 .styles.fullScreenEditor{
@@ -91,119 +91,17 @@ pre {
   }
 }
 
-
-.ProseMirror pre,
-.ProseMirror .inline-code {
-  @apply bg-black bg-opacity-5 rounded-lg dark:bg-opacity-30 text-gray-700 dark:text-gray-200 !important;
-  font-family: 'Helvetica', 'Arial', sans-serif;
-  tab-size: 2;
-  font-variant-ligatures: normal;
-}
-.ProseMirror a {
-  @apply text-amber-400 dark:text-amber-400 !important;
-}
-.ProseMirror strong {
-  @apply dark:text-white;
-}
-.ProseMirror blockquote {
-  @apply dark:border-gray-700 dark:text-gray-100;
-}
-.ProseMirror h1,
-.ProseMirror h2,
-.ProseMirror h3,
-.ProseMirror h4,
-.ProseMirror h5,
-.ProseMirror h6 {
-  @apply dark:text-white font-bold;
-}
-.ProseMirror .mention {
-  @apply py-0.5 px-1 rounded-md bg-amber-400 text-amber-400 bg-opacity-10 dark:text-amber-400 hover:underline;
-  cursor: pointer;
-}
-.ProseMirror .math-block {
-  @apply dark:bg-gray-800;
-}
-.math-node .math-src {
-  @apply dark:text-purple-400 text-purple-500 !important;
-}
-img.ProseMirror-selectednode {
-  @apply ring-2 ring-amber-400 transition;
+blockquote {
+ @apply border-l-4 border-[#E4E4E6] dark:border-[#3F3F46];
 }
 
-.ProseMirror {
-  min-height:  400px;
-  & > :first-child {
-    margin-top: 0;
+.tiptap {
+  > * + * {
+    margin-top: 0.75em;
   }
-  &:focus {
-    outline: none;
-  }
-  ul[data-type="taskList"] {
-    list-style: none;
-    padding: 0;
-    li {
-      &::before {
-        height: 0 !important;
-        width: 0 !important;
-      }
-      > label {
-        flex: 0 0 auto;
-        margin-right: 0.5rem;
-        user-select: none;
-      }
-      p {
-        margin: 0;
-      }
-      input[type="checkbox"] {
-        appearance: none;
-        -webkit-appearance: none;
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        border: 2px solid #ccc;
-        outline: none;
-        cursor: pointer;
-        transition: border-color 0.3s;
-        margin-top: 4px;
-      }
 
-      input[type="checkbox"]:checked {
-        border-color: #FBBF24;
-      }
-
-      /* Optional: You can add a custom background or other styles for the checked state */
-      input[type="checkbox"]:checked::before {
-        content:  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16'%3E%3Cpath d='M10.0007 15.1709L19.1931 5.97852L20.6073 7.39273L10.0007 17.9993L3.63672 11.6354L5.05093 10.2212L10.0007 15.1709Z' fill='rgba(251,191,36,1)'%3E%3C/path%3E%3C/svg%3E");
-        display: block;
-        width: 100%;
-        height: 100%;
-        font-size: 16px;
-        line-height: 20px;
-        text-align: center;
-        color: #FBBF24;
-      }
-
-      display: flex;
-      align-items: flex-start;
-    }
-  }
-  .find {
-    @apply bg-yellow-400;
-  }
-  .inline-code {
-    @apply p-0.5 px-1 rounded;
-  }
-  p.is-editor-empty:first-child::before {
-    content: attr(data-placeholder);
-    float: left;
-    @apply text-gray-400 dark:text-gray-700;
-    pointer-events: none;
-    height: 0;
-  }
-  img {
-    @apply rounded;
-  }
-  mark {
-    @apply bg-yellow-200 dark:bg-yellow-100;
+  ul,
+  ol {
+    padding: 0 1rem;
   }
 }
