--- a/src/components/css/Codeblock.css
+++ b/src/components/css/Codeblock.css
@@ -12,7 +12,7 @@
   }
 
   pre {
-    @apply bg-[#F2F2F2] dark:bg-[#303033] rounded-md text-black dark:text-white font-mono py-3 px-4;
+    @apply bg-[#F2F2F2] dark:bg-[#303033] rounded-xl text-black dark:text-white font-mono py-3 px-4;
     
       code {
        @apply bg-[#F2F2F2] dark:bg-[#303033] text-inherit text-base p-0;
