--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;1,400&family=EB+Garamond:ital,wght@0,400;0,500;1,400&family=Ubuntu:ital,wght@0,400;0,500;1,400&display=swap');
+@import url('https://fonts.cdnfonts.com/css/open-dyslexic');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
+  --selected-font: 'Arimo', sans-serif;
+  -webkit-tap-highlight-color: transparent;
+}
+
+body {
     @apply dark:text-white bg-white dark:bg-[#232222];
-    font-family: 'Arimo', sans-serif;
+    font-family: var(--selected-font);
 }
 
 h1 {
