--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,7 @@
 body {
     @apply dark:text-white bg-white dark:bg-[#232222];
     font-family: var(--selected-font);
+    transition: background-color 0.3s ease;
 }
 
 h1 {
