🎉 Share, Lock and Label your notes
Changes:

💬 Exports can now be shared.
🔓 Face ID and Touch ID can now be used to lock notes.
🎨 Minor design enhancements.
🐞 Bug Fixes: The editor now opens in full screen in Settings.
🖋️ Added a separate title field.

--- a/src/css/NoteEditor.module.css
+++ b/src/css/NoteEditor.module.css
@@ -16,14 +16,6 @@ mark {
   @apply h-full
 }
 
-.tiptap p.is-editor-empty:first-child::before {
-  color: #adb5bd;
-  content: attr(data-placeholder);
-  float: left;
-  height: 0;
-  pointer-events: none;
-}
-
 img {
   @apply rounded-xl
 }
@@ -95,17 +87,13 @@ input[type="checkbox"]:checked::before {
   color: #FBBF24;
 }
 
-.ProseMirror {
-  outline: none;
-}
-
 .labelinput {
-  @apply text-lg flex dark:text-white bg-transparent w-auto dark:bg-[#232222] outline-none content-center;
+  @apply text-lg flex dark:text-white bg-transparent w-auto outline-none content-center;
 }
 
-.labelinput:empty:before {
+.labelinput:empty::before {
   content:attr(data-placeholder);
-  @apply dark:bg-[#232222] text-neutral-600 dark:text-neutral-200;
+  @apply bg-transparent text-neutral-600 dark:text-[#A1A1AA] !important; 
 }
 
 @layer utilities {
