--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;1,400&family=EB+Garamond:ital,wght@0,400;0,500;1,400&family=Ubuntu:ital,wght@0,400;0,500;1,400&display=swap');
-@import url('https://fonts.cdnfonts.com/css/open-dyslexic');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,6 +13,30 @@ body {
     @apply dark:text-white bg-white dark:bg-[#232222];
     font-family: var(--selected-font);
     transition: background-color 0.3s ease;
+}
+
+h1 {
+  @apply text-3xl font-bold leading-relaxed 
+}
+
+h2 {
+  @apply text-3xl font-bold leading-relaxed 
+}
+
+h3 {
+  @apply text-2xl font-bold leading-relaxed 
+}
+
+h4 {
+  @apply text-xl font-bold leading-relaxed 
+}
+
+h5 {
+  @apply text-lg font-bold leading-relaxed 
+}
+
+h6 {
+  @apply text-base font-bold leading-relaxed 
 }
 
 ol {
@@ -59,9 +81,6 @@ ul {
 }
 .math-node .math-src {
   @apply dark:text-purple-400 text-purple-500 !important;
-}
-img.ProseMirror-selectednode {
-  @apply ring-2 ring-amber-400 transition;
 }
 
 .ProseMirror {
@@ -134,9 +153,6 @@ img.ProseMirror-selectednode {
     pointer-events: none;
     height: 0;
   }
-  img {
-    @apply rounded;
-  }
   mark {
     @apply bg-yellow-200 dark:bg-yellow-100;
   }
@@ -156,6 +172,15 @@ img.ProseMirror-selectednode {
 .tiptap {
   > * + * {
     margin-top: 0.75em;
+  }
+
+  img {
+    height: auto;
+    max-width: 100%;
+
+    &.ProseMirror-selectednode {
+      outline: 3px solid #68cef8;
+    }
   }
 
   pre {
