 UI Chnages, Locked Notes and Settings

--- a/src/css/NoteEditor.module.css
+++ b/src/css/NoteEditor.module.css
@@ -79,7 +79,7 @@ input[type="checkbox"]:checked::before {
 }
 
 .labelinput {
-  @apply text-lg flex dark:text-white bg-transparent w-auto outline-none content-center;
+  @apply text-lg flex dark:text-[color:var(--selected-dark-text)] bg-transparent w-auto outline-none content-center;
 }
 
 .labelinput:empty::before {
