--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,8 @@
 :root {
   --selected-font: "Arimo", sans-serif;
   -webkit-tap-highlight-color: transparent;
+  --selected-dark-text: white;
+    @apply dark:text-[color:var(--selected-dark-text)];
   padding-top: constant(safe-area-inset-top) !important;
   padding-top: env(safe-area-inset-top) !important;
 }
@@ -20,7 +22,7 @@
 }
 
 body {
-  @apply dark:text-white bg-white dark:bg-[#232222];
+  @apply dark:text-[color:var(--selected-dark-text)] bg-white dark:bg-[#232222];
   font-family: var(--selected-font);
   transition: background-color 0.3s ease;
 }
@@ -65,7 +67,7 @@ code {
   @apply text-amber-400 dark:text-amber-400 !important;
 }
 .ProseMirror strong {
-  @apply dark:text-white;
+  @apply dark:text-[color:var(--selected-dark-text)];
 }
 .ProseMirror blockquote {
   @apply dark:border-gray-700 dark:text-gray-100;
@@ -76,7 +78,7 @@ code {
 .ProseMirror h4,
 .ProseMirror h5,
 .ProseMirror h6 {
-  @apply dark:text-white;
+  @apply dark:text-[color:var(--selected-dark-text)];
 }
 .ProseMirror .mention {
   @apply py-0.5 px-1 rounded-md bg-amber-400 text-amber-400 bg-opacity-10 dark:text-amber-400 hover:underline;
@@ -154,7 +156,7 @@ code {
   p.is-editor-empty:first-child::before {
     content: attr(data-placeholder);
     float: left;
-    @apply text-gray-400 dark:text-gray-700;
+    @apply text-gray-400 dark:text-[#A1A1AA];
     pointer-events: none;
     height: 0;
   }
@@ -164,7 +166,7 @@ code {
 }
 
 .labelinput {
-  @apply text-lg flex dark:text-white bg-transparent w-auto outline-none content-center;
+  @apply text-lg flex dark:text-[color:var(--selected-dark-text)] bg-transparent w-auto outline-none content-center;
 }
 
 .labelinput:empty::before {
