--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -252,5 +252,5 @@ img.ProseMirror-selectednode {
 }
 
 mark {
-  @apply bg-yellow-200 dark:bg-yellow-100;
+  @apply bg-yellow-200 dark:bg-yellow-100 rounded;
 }
