--- a/src/assets/css/video.scss
+++ b/src/assets/css/video.scss
@@ -8,7 +8,7 @@
   height: auto;
 
   &.ProseMirror-selectednode {
-    @apply border-4 border-amber-400;
+    @apply border-4 border-primary;
   }
 
   iframe {
