--- a/src/lib/tiptap/exts/embed-block/iframe.scss
+++ b/src/lib/tiptap/exts/embed-block/iframe.scss
@@ -9,7 +9,7 @@
   height: auto;
 
   &.ProseMirror-selectednode {
-    @apply border-4 border-amber-400;
+    @apply border-4 border-primary;
   }
 
   iframe {
