--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -12,7 +12,7 @@
 .ProseMirror pre,
 .ProseMirror .inline-code {
   @apply bg-black bg-opacity-5 rounded-lg dark:bg-neutral-600 dark:bg-opacity-30 text-neutral-700 dark:text-neutral-200 pt-6 !important;
-  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-family: "Helvetica", "Arial", sans-serif;
   tab-size: 2;
   font-variant-ligatures: normal;
 }
@@ -22,9 +22,6 @@
 }
 .ProseMirror a {
   @apply text-primary dark:text-primary !important;
-}
-.ProseMirror strong {
-  @apply dark:text-[color:var(--selected-dark-text)];
 }
 .ProseMirror blockquote {
   @apply dark:border-neutral-700 dark:text-neutral-100;
@@ -40,6 +37,10 @@
   margin-bottom: 1em !important;
 }
 .ProseMirror p {
+  @apply dark:text-[color:var(--selected-dark-text)];
+}
+.ProseMirror strong {
+  color: inherit !important;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
   @apply dark:text-[color:var(--selected-dark-text)];
@@ -49,7 +50,7 @@
   cursor: pointer;
 }
 
-[dir='rtl'] .mention {
+[dir="rtl"] .mention {
   display: inline-block;
   margin-left: 2px;
 }
@@ -72,10 +73,10 @@ img.ProseMirror-selectednode {
   &:focus {
     outline: none;
   }
-  li[data-checked='false'] {
+  li[data-checked="false"] {
     @apply dark:text-[color:var(--selected-dark-text)];
   }
-  li[data-checked='true'] {
+  li[data-checked="true"] {
     @apply text-neutral-500 line-through dark:text-[color:var(--selected-dark-text)];
   }
   ul li {
@@ -94,7 +95,7 @@ img.ProseMirror-selectednode {
   li ul {
     margin-top: 0 !important;
   }
-  ul[data-type='taskList'] {
+  ul[data-type="taskList"] {
     list-style: none;
     padding: 0;
     li {
@@ -110,7 +111,7 @@ img.ProseMirror-selectednode {
       p {
         margin: 0;
       }
-      input[type='checkbox'] {
+      input[type="checkbox"] {
         appearance: none;
         -webkit-appearance: none;
         width: 20px;
@@ -122,13 +123,13 @@ img.ProseMirror-selectednode {
         transition: border-color 0.3s;
       }
 
-      input[type='checkbox']:checked {
+      input[type="checkbox"]:checked {
         border-color: #fbbf24;
         background-color: #fbbf24;
       }
 
       /* Optional: You can add a custom background or other styles for the checked state */
-      input[type='checkbox']:checked::before {
+      input[type="checkbox"]:checked::before {
         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16'%3E%3Cpath d='M10.0007 15.1709L19.1931 5.97852L20.6073 7.39273L10.0007 17.9993L3.63672 11.6354L5.05093 10.2212L10.0007 15.1709Z' fill='rgba(255, 255, 255, 0.8)'%3E%3C/path%3E%3C/svg%3E");
         display: block;
         width: 100%;
