--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -16,10 +16,6 @@
   tab-size: 2;
   font-variant-ligatures: normal;
 }
-.ProseMirror {
-  font-size: 1.065rem;
-  line-height: 1.5;
-}
 .ProseMirror a {
   @apply text-primary dark:text-primary !important;
 }
@@ -37,6 +33,8 @@
   margin-bottom: 1em !important;
 }
 .ProseMirror p {
+  margin-top: 0.5em !important;
+  margin-bottom: 0.5em !important;
   @apply dark:text-[color:var(--selected-dark-text)];
 }
 .ProseMirror strong {
@@ -80,16 +78,12 @@ img.ProseMirror-selectednode {
     @apply text-neutral-500 line-through dark:text-[color:var(--selected-dark-text)];
   }
   ul li {
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
     @apply pr-[1.25em] rtl:pr-[1.25em] !important;
     &::before {
       top: 0.45em !important;
     }
   }
   ol li {
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
     @apply pr-[1.25em] rtl:pr-[1.25em] !important;
   }
   li ul {
@@ -109,7 +103,7 @@ img.ProseMirror-selectednode {
         user-select: none;
       }
       p {
-        margin: 0;
+        margin: 0 !important;
       }
       input[type="checkbox"] {
         appearance: none;
@@ -125,8 +119,7 @@ img.ProseMirror-selectednode {
       }
 
       input[type="checkbox"]:checked {
-        border-color: #fbbf24;
-        background-color: #fbbf24;
+        @apply bg-primary border-primary border-2;
       }
 
       /* Optional: You can add a custom background or other styles for the checked state */
