--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,79 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --theme: "light";
+  --selected-font: "Arimo", sans-serif;
+  --selected-font-code: "JetBrainsMono", monospace;
+  --selected-dark-text: white;
+  @apply dark:text-[color:var(--selected-dark-text)];
+}
+
+body {
+  position: relative;
+  font-family: var(--selected-font);
+  @apply bg-[#FFFFFF] dark:bg-[#232222] dark:text-[color:var(--selected-dark-text)];
+}
+.dark * {
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
+button,
+input,
+textarea,
+select {
+  &:focus {
+    outline: none;
+  }
+}
+
+option {
+  @apply dark:bg-neutral-700 dark:text-[color:var(--selected-dark-text)];
+}
+
+.v-remixicon {
+  display: inline-block;
+}
+
+.tippy-box[data-theme~="tooltip-theme"] {
+  background-color: #191919;
+  color: white;
+  @apply px-2 py-1 text-sm text-neutral-200 rounded-md;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 9px;
+}
+::-webkit-scrollbar-thumb {
+  @apply bg-[#d8d9d9] dark:bg-[#424546];
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-[#9ed6f4] dark:bg-[#2c6685];
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.text-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.no-security-text input {
+  -webkit-text-security: none !important;
+}
+
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
