--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -12,9 +12,13 @@
 .ProseMirror pre,
 .ProseMirror .inline-code {
   @apply bg-black bg-opacity-5 rounded-lg dark:bg-neutral-600 dark:bg-opacity-30 text-neutral-700 dark:text-neutral-200 pt-6 !important;
-  font-family: "Helvetica", "Arial", sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
   tab-size: 2;
   font-variant-ligatures: normal;
+}
+.ProseMirror {
+  font-size: 1.065rem;
+  line-height: 1.5;
 }
 .ProseMirror a {
   @apply text-primary dark:text-primary !important;
@@ -37,6 +41,10 @@
   margin-bottom: 0.5em !important;
   @apply dark:text-[color:var(--selected-dark-text)];
 }
+.ProseMirror li {
+  margin-top: 0.25em !important;
+  margin-bottom: 0.25em !important;
+}
 .ProseMirror strong {
   color: inherit !important;
   margin-top: 0 !important;
@@ -48,13 +56,16 @@
   cursor: pointer;
 }
 
-[dir="rtl"] .mention {
+[dir='rtl'] .mention {
   display: inline-block;
   margin-left: 2px;
 }
 
 .ProseMirror .math-block {
   @apply dark:bg-neutral-800;
+}
+.ProseMirror hr {
+  @apply dark:bg-neutral-600;
 }
 .math-node .math-src {
   @apply dark:text-purple-400 text-purple-500 !important;
@@ -71,10 +82,13 @@ img.ProseMirror-selectednode {
   &:focus {
     outline: none;
   }
-  li[data-checked="false"] {
+  li::marker {
     @apply dark:text-[color:var(--selected-dark-text)];
   }
-  li[data-checked="true"] {
+  li[data-checked='false'] {
+    @apply dark:text-[color:var(--selected-dark-text)];
+  }
+  li[data-checked='true'] {
     @apply text-neutral-500 line-through dark:text-[color:var(--selected-dark-text)];
   }
   ul li {
@@ -89,7 +103,7 @@ img.ProseMirror-selectednode {
   li ul {
     margin-top: 0 !important;
   }
-  ul[data-type="taskList"] {
+  ul[data-type='taskList'] {
     list-style: none;
     padding: 0;
     li {
@@ -103,13 +117,13 @@ img.ProseMirror-selectednode {
         user-select: none;
       }
       p {
-        margin: 0 !important;
+        margin: 0;
       }
-      input[type="checkbox"] {
+      input[type='checkbox'] {
         appearance: none;
         -webkit-appearance: none;
-        width: 18px;
-        height: 18px;
+        width: 24px;
+        height: 24px;
         border-radius: 50%;
         border: 2px solid #ccc;
         outline: none;
@@ -118,13 +132,14 @@ img.ProseMirror-selectednode {
         transform: translateY(8px) translateX(-2px);
       }
 
-      input[type="checkbox"]:checked {
-        @apply bg-primary border-primary border-2;
+      input[type='checkbox']:checked {
+        border-color: #fbbf24;
+        background-color: #fbbf24;
       }
 
       /* Optional: You can add a custom background or other styles for the checked state */
-      input[type="checkbox"]:checked::before {
-        content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16'%3E%3Cpath d='M10.0007 15.1709L19.1931 5.97852L20.6073 7.39273L10.0007 17.9993L3.63672 11.6354L5.05093 10.2212L10.0007 15.1709Z' fill='rgba(255, 255, 255, 0.8)'%3E%3C/path%3E%3C/svg%3E");
+      input[type='checkbox']:checked::before {
+        content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='20' height='20'%3E%3Cpath d='M10.0007 15.1709L19.1931 5.97852L20.6073 7.39273L10.0007 17.9993L3.63672 11.6354L5.05093 10.2212L10.0007 15.1709Z' fill='rgba(255, 255, 255, 0.8)'%3E%3C/path%3E%3C/svg%3E");
         display: block;
         width: 100%;
         height: 100%;
